[package]
name = "pts_bot"
version = "0.1.0"
authors = ["David Duarte <licorne@google.com>", "Charlie Boutier <charliebout@google.com>"]
edition = "2018"

[dependencies]
libpts = { git = "sso://blueberry/libpts" }
tokio = { version = "1.11.0", features = ["macros", "rt-multi-thread"] } # gRPC crate dependencies
tonic = "0.5.2" # gRPC crate
prost = "0.8.0" # protobuf crate
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
structopt = "0.3.23"
termion = "1.5"
dirs = "3.0"
rand = "0.8.4"

[build-dependencies]
tonic-build = "0.5"