[package]
name = "pts_bot"
version = "0.1.0"
authors = ["David Duarte <licorne@google.com>", "Charlie Boutier <charliebout@google.com>"]
edition = "2018"

[dependencies]
libpts = { git = "sso://blueberry/libpts" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
structopt = "0.3.23"
termion = "1.5"
dirs = "3.0"
pyo3 = { version="0.14.5", features = ["auto-initialize"] } # Keep in mind we could remove this feature and initialize the runtime ourself
