[package]
name = "pts-bot"
version = "0.1.0"
authors = ["David Duarte <licorne@google.com>", "Charlie Boutier <charliebout@google.com>", "Thomas Girardier <girardier@google.com>"]
edition = "2018"

[dependencies]
libpts = { path = "libpts" }
futures-lite = "1.12.0"
async-io = "1.6.0"
async-ctrlc = "1.2.0"
blocking = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
structopt = "0.3.23"
termion = "1.5"
dirs = "3.0"
pyo3 = { version="0.14.5", features = ["auto-initialize"] } # Keep in mind we could remove this feature and initialize the runtime ourself

[package.metadata.raze]
workspace_path = "//third_party/cargo"
package_aliases_dir = "third_party/cargo"
targets = ["x86_64-unknown-linux-gnu"]
genmode = "Vendored"
