[package]
name = "libpts"
version = "0.1.0"
authors = ["David Duarte <licorne@google.com>", "Charlie Boutier <charliebout@google.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
nix = "=0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde-xml-rs = "0.5.0"
evalexpr = "6.5.0"
nom = "7.0"
termion = "1.5"

[dev-dependencies]
dirs = "3.0"
structopt = "0.3.23"
anyhow = "1.0"
